Don't run the tdd loop inside the build_system loop

--- a/build.ini
+++ b/build.ini
@@ -10,6 +10,6 @@ trigger_fs_suffix = *.c *.h
 
 [action]
 name = tdd
-cmd = cc tdd.c -o tdd && ./tdd
+cmd = cc tdd.c -o tdd
 trigger_fs_suffix = *.c *.h
 
