--- a/build.ini
+++ b/build.ini
@@ -13,3 +13,13 @@ name = tdd
 cmd = cc tdd.c -o tdd
 trigger_fs_suffix = *.c *.h
 
+[action]
+name = bs
+cmd = cc utils/standalone/build_system.c -o utils/standalone/bs
+trigger_fs_suffix = *.c *.h
+
+[action]
+name = time
+cmd = cc utils/standalone/time.c -o utils/standalone/time
+trigger_fs_suffix = *.c *.h
+
