build the buildsystem using gnu extensinos

--- a/build.ini
+++ b/build.ini
@@ -15,7 +15,7 @@ trigger_fs_suffix = *.c *.h
 
 [action]
 name = bs
-cmd = cc utils/standalone/build_system.c -o utils/standalone/bs
+cmd = cc -std=gnu99 utils/standalone/build_system.c -o utils/standalone/bs
 trigger_fs_suffix = *.c *.h
 
 [action]
