Change used C standart

--- a/build.ini
+++ b/build.ini
@@ -1,6 +1,6 @@
 [action]
 name = codegen
-cmd = cc codegen.c -o codegen && ./codegen
+cmd = cc -std=gnu99 codegen.c -o codegen && ./codegen
 trigger_fs_suffix = *.codegen.c
 
 [action]
