Correct used c standard

--- a/build.ini
+++ b/build.ini
@@ -5,12 +5,12 @@ trigger_fs_suffix = *.codegen.c
 
 [action]
 name = unit_test
-cmd = cc unit_test.c -o unit_test && ./unit_test
+cmd = cc -std=gnu99 unit_test.c -o unit_test && ./unit_test
 trigger_fs_suffix = *.c *.h
 
 [action]
 name = tdd
-cmd = cc tdd.c -o tdd
+cmd = cc -std=gnu99 tdd.c -o tdd
 trigger_fs_suffix = *.c *.h
 
 [action]
@@ -20,6 +20,6 @@ trigger_fs_suffix = *.c *.h
 
 [action]
 name = time
-cmd = cc utils/standalone/time.c -o utils/standalone/time
+cmd = cc -std=gnu99 utils/standalone/time.c -o utils/standalone/time
 trigger_fs_suffix = *.c *.h
 
